# time-series-data-packer-rs

./: Cargo.toml  README.md
.github/workflows/: check-and-lint.yaml  publish_tags_to_crates_io.yaml
benches/: compression_benchmarks.rs
examples/: README.md
examples/csv_to_strategies_discovery/: Cargo.toml  delta_next_mean_10pct.rs.txt  delta_next_similarvalues.rs.txt  delta_next_similarvalues.rs.txt.packed  mean_1pct.rs.txt.packed  mean_1pct.rs.txt.unpacked  mean_20pct.rs.txt  mean_30pct.rs.txt.packed  mean_5pct.rs.txt.unpacked  samples.origin.rs.txt  similar.rs.txt  similar.rs.txt.packed  similar.rs.txt.unpacked
examples/csv_to_strategies_discovery/src/: main.rs
examples/data/: README.md  audio_wav_pcm_excerpt.csv  cnc_vibration_spectrum.csv  iot_motor_rpm_ramp.csv  iot_pressure_noise.csv  iot_temperature_sensor.csv  iot_valve_state_digital.csv
examples/strategy_showcase/: Cargo.toml
examples/strategy_showcase/src/: data.rs  main.rs  report.rs
examples/wav2csv/: 1.csv  Cargo.toml
examples/wav2csv/src/: main.rs
src/: helpers.rs  lib.rs
src/strategies/: delta.rs  delta_of_delta.rs  mean_based_compression.rs  mod.rs  run_length.rs  similar_values.rs  simple_8b.rs  xor_gorilla.rs
tests/: test_delta_of_delta_strategy.rs  test_delta_strategy.rs  test_run_length_strategy.rs  test_simple8b_strategy.rs  test_xor_gorilla_strategy.rs
