[package]
name = "time_series_data_packer_rs"
version = "0.4.1"
edition = "2021"
authors = ["Marcin Bielak <marcin.bieli+TimeSeriesDataPackerRs@gmail.com>"]
description = "Time series data packer written in Rust language for data intensive IoT and IIoT projects."
repository = "https://github.com/bieli/time-series-data-packer-rs"
homepage = "https://github.com/bieli/time-series-data-packer-rs"
license = "MIT"
keywords = ["time-series", "data", "packer", "compressor"]

[dependencies]
thiserror = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

#[[bench]]
#name = "compression_benchmarks"
#harness = false

#[[bench]]
#name = "simple_bench"
#harness = false
